--- a/bower.json
+++ b/bower.json
@@ -7,5 +7,8 @@
     "ember-qunit-notifications": "0.1.0",
     "pretender": "~1.1.0",
     "Faker": "~3.1.0"
+  },
+  "devDependencies": {
+    "blanket": "5e94fc30f2e694bb5c3718ddcbf60d467f4b4d26"
   }
 }
